--- a/index.html
+++ b/index.html
@@ -144,17 +144,6 @@ My design process is centered around understanding the unique needs and objectiv
         </div>
 
         <hr>
-        <div class="wigcontainer">
-          <p class="wiginfo"> CD booklet created to highlight the importance of earplugs when <br> clubbing. </p>
-          <a class="wig" href="wig.html">
-            <li class="liwig"><img class="imgwig" src="imageshome/plug.png">Plug-In</li>
-          </a>
-          <div class="wigboutcontainer">
-            <p class="wigbout">2022</p>
-          </div>
-        </div>
-
-        <hr>
 
         <div class="groundedcontainer">
           <p class="groundedinfo"> Motion piece creating &amp; animating characters based on foley sounds. (Cinema 4D, After Effects) </p>
@@ -224,52 +213,9 @@ My design process is centered around understanding the unique needs and objectiv
 
 
 
-        <div class="alonecontainer">
-          <p class="aloneinfo"> Zine created based on the book A Lonely City by Olivia Liang. </p>
-          <a class="alone" href="alone.html">
-            <li class="lialone"><img class="imgalone" src="imageshome/cover.png">Alone Zine</li>
-          </a>
-          <div class="aloneboutcontainer">
-            <p class="alonebout">2020</p>
-          </div>
-        </div>
-
-        <hr>
 
 
-
-        <div class="heatcontainer">
-          <p class="heatinfo"> Zine created based on The Uninhabitable Earth by David Wallace-Wells. </p>
-          <a class="heat" href="heat.html">
-            <li class="liheat"><img class="imgheat" src="imageshome/imgheat.png">Heat Death</li>
-          </a>
-          <div class="heatboutcontainer">
-            <p class="heatbout">2020</p>
-
-          </div>
-        </div>
-
-        <hr>
-
-        <div class="outcontainer">
-          <p class="outinfo"> Interview with Joe Blandamer and Christopher Childs, professional stop motion designers.
-
-          </p>
-          <a class="out" href="outhere.html">
-            <li class="liout"><img class="imgout" src="imageshome/imgout.png">Out There</li>
-          </a>
-          <div class="outboutcontainer">
-            <p class="outbout">2020</p>
-
-          </div>
-        </div>
-
-        <hr>
-
-
-
-
-        <li class="top"> Selected Artwork (2020-2023) </li>
+        <li class="top"> Selected Artwork (2020-2023) <br> Print </li>
 
       </ul>
     </div>
@@ -280,20 +226,24 @@ My design process is centered around understanding the unique needs and objectiv
       <div class="column">
         <div class="image-item">
 
-          <p> Art of bubble (2023)</p>
-          <video controls style="border-radius:5px;" src="imageshome/misc/balls.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
+
 
 
           <p> Roker - Album Cover (2023)</p>
-          <img style="margin-bottom: 5%;" src="imageshome/misc/VINYL.png" alt="Alone Cover">
+          <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
+            <img  src="imageshome/misc/31.png" alt="Alone Cover"></img>
+        </button>
 
-          <img style="margin-bottom: 5%;" src="imageshome/misc/31.png" alt="Alone Cover">
-          <video controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
 
           <p> Courtyard Social - Illustrator (2023)</p>
 
-          <img src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
-          <img src="imageshome/misc/LOGO ORANGE.png" alt="Alone Cover">
+          <img style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+
+          <p> On my radio (2021)</p>
+
+          <img style="width:100%; "  src="imageshome/misc/6.jpg" alt="Alone Cover">
 
 
 
@@ -304,43 +254,55 @@ My design process is centered around understanding the unique needs and objectiv
       <div class="column">
         <div class="image-item">
 
-          <p> Numeris Gift Card Promo Video - Blender (2023) </p>
-
-          <video style="border-radius:5px;" src="VIDEO/NUMERIS.mp4" controls loop muted autoplay poster="posterimage.jpg"></video>
 
 
           <p> Radio Show - Cinema 4D (2022) </p>
-          <img src="imageshome/misc/ROOM5.png" alt="Alone Cover">
+          <img src="./imageshome/misc/ELLIE.png" alt="Radio Show"style="width: 100%; ">
 
-          <p> MeToo - After Effects (2020) </p>
-          <video autoplay muted loop controls class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
           <p> Chiming In - Photoshop, Risograph (2022) </p>
-          <img src="imageshome/misc/CHIMING.png" alt="Alone Cover">
+          <img style="width: 100%;"src="imageshome/misc/ci.png" alt="Alone Cover">
+
+          <p> Alone Publication - Photoshop, Indesign (2022)</p>
+            <img style="width:100%;" class="cover" src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+
 
 
         </div>
       </div>
+
       <div class="column">
         <div class="image-item">
 
-          <p> Vault Records - After Effects (2022) </p>
-          <video autoplay controls muted loop  src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
+
+          <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022)</p>
+          <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
+            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.png" alt="Alone Cover">
+        </button>
+
+        <p> Heat Death - Photoshop, Indesign, Illustrator (2022)</p>
+        <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
+          <img style="width:100%; height:100%;"  src="imageshome/misc/mock1.png" alt="Alone Cover">
+      </button>
 
 
-          <p> Cut It Out - After Effects (2020) </p>
-          <video style="border-radius:5px;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
-
-
-          <p> MeToo - Cinema 4D, After Effects (2020) </p>
-          <video autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
-
+        <p> Out There - Photoshop, Indesign (2022)</p>
+        <button class="image-pic" data-modal="true" data-gallery="out" aria-label="Open out image gallery" style="background-color: white; border: 0;">
+          <img style="width:100%;"  src="imageshome/misc/1out.png" alt="Alone Cover">
+        </button>
 
           <p> Future of Loneliness - Indesign (2020) </p>
-          <img style="margin-bottom: 5%;" src="imageshome/misc/fol1.png" alt="Alone Cover">
-          <img style="margin-bottom: 5%;" src="imageshome/misc/fol2.png" alt="Alone Cover">
-          <img style="margin-bottom: 5%;"src="imageshome/misc/fol6.png" alt="Alone Cover">
-          <img style="margin-bottom: 5%;"src="imageshome/misc/fol7.png" alt="Alone Cover">
+          <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
+            <img src="./imageshome/misc/fol1.png" alt="Food">
+            </button>
+
+
+          <p> Alone Publication - Photoshop, Indesign (2022)</p>
+          <button class="image-pic" data-modal="true" data-gallery="Alone" aria-label="Open Alone image gallery" style="background-color: white; border: 0;">
+            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/COVER.png" alt="Alone Cover">
+        </button>
+
+
 
 
         </div>
@@ -348,6 +310,86 @@ My design process is centered around understanding the unique needs and objectiv
     </div>
   </div>
 
+<hr>
+
+<li class="top"> Selected Artwork (2020-2023) <br> Motion </li>
+
+
+<div class="container">
+  <div class="image-gallery">
+    <div class="column">
+      <div class="image-item">
+
+        <p> Art of bubble (2023)</p>
+        <video style="width: 100%;" controls style="border-radius:5px;" src="imageshome/misc/balls.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
+
+        <p> Roker - Spotify Canvas (2023)</p>
+
+        <video style="width: 100%;" controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+
+
+
+        <p> MeToo - After Effects (2020) </p>
+        <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 6.mp4" alt="Alone Cover"></video>
+
+
+        <p> Cymatics - After Effects (2020) </p>
+
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730951920?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="CYMATIC"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+<p> Butterfly Animation - Cinema 4D, After Effects (2020) </p>
+
+<video style="width: 100%;" autoplay controls muted loop  src="imageshome/misc/BUTTERFLY.mp4" alt="Alone Cover"></video>
+
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+
+        <p> Numeris Gift Card Promo Video - Blender (2023) </p>
+
+        <video style="border-radius:5px; width: 100%" src="VIDEO/NUMERIS.mp4" controls loop muted autoplay poster="posterimage.jpg"></video>
+
+
+
+        <p> MeToo - After Effects (2020) </p>
+        <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
+
+        <p> Grounded Instagram Reel - Cinema 4D, After Effects (2020) </p>
+        <video style="width: 100%;" autoplay muted loop controls class="first" src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
+
+
+
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="image-item">
+
+        <p> Vault Records - After Effects (2022) </p>
+        <video style="width: 100%;" autoplay controls muted loop  src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
+
+
+        <p> Cut It Out - After Effects (2020) </p>
+        <video style="border-radius:5px; width: 100%;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
+
+
+        <p> MeToo - Cinema 4D, After Effects (2020) </p>
+        <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
+
+        <p> Plug-In Visualiser - Cinema 4D, After Effects (2020) </p>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730834898?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="When It's Gone Visualiser"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+<p> Augmented Reality - Adobe Aero (2020) </p>
+
+<div style="padding:178.11% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/621614548?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="aero_recording - Copy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -365,7 +407,19 @@ My design process is centered around understanding the unique needs and objectiv
       <p class="top"> Back to top ↑ </p>
     </a>
 
-    <script language="javascript" src="myScript.js"></script>
+
+    <script type="module">
+      import initGallery from "./js/galleryApp.js";
+      initGallery('data/galleries.json', {
+        speed: 600,
+      })
+    </script>
+
+    <script language="javascript" src="myScript.js">
+
+
+    </script>
+
 
 
 
