--- a/Conqueer.html
+++ b/Conqueer.html
@@ -139,13 +139,13 @@
         <div style="width: 100%;" class="column">
           <div class="image-item">
             <p> Moving poster created using Blender and After Effects.</p>
-            <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Poster created using Blender and Photoshop.</p>
             <img src="MEDIACONQ/IGFIN2.png" alt="">
             <p> Poster created using Cinema 4D and Photoshop.</p>
             <img src="MEDIACONQ/CONQUEER.png" alt="">
             <p> Moving poster created using Cinema 4D and After Effects.</p>
-            <video style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video controls style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
           </div>
         </div>
@@ -153,13 +153,13 @@
         <div style="width: 100%;" class="column">
           <div class="image-item">
             <p> Announcement video created using Blender and After Effects.</p>
-            <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT1.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT1.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Poster created using Procreate, Blender and Photoshop.</p>
 
             <img src="MEDIACONQ/AHH.png" alt=""></img>
             <p> Moving poster created using Cinema 4D and After Effects.</p>
 
-            <video style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Announcement graphic created using Cinema 4D and Photoshop.</p>
             <img style="width: 100%; height: 100%;;" class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
             <p> Poster created using Procreate and Photoshop.</p>
