--- a/fuze.html
+++ b/fuze.html
@@ -142,11 +142,11 @@
     <div style="width:100%;" class="column">
       <div class="image-item">
         <p> Announcement graphic created using Blender, Adobe Illustrator, After Effects </p>
-        <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+        <video controls style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/REDLIGHTMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
         <p> Event map graphic created using Adobe Illustrator, Photoshop </p>
         <img src="MEDIAFUZE/MAP.png" style="width: 100%" style="border-radius:5px; margin:5%;" alt=""></img>
         <p> Ticket announcement, created using Illustrator and After Effects </p>
-        <video style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+        <video controls style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
         <p> Blog graphic, created using Photoshop </p>
 
         <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.png" alt="">
