--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <div class="about-wrapper" style="  display: flex;
   justify-content: center; margin-bottom: 20%;">
-<p class="about" style="text-align: justify; font-size:1.5vw;"> Hello! I'm Kailan, a passionate graphic designer with a strong creative flair and a keen eye for detail. I believe that design has the power to captivate and communicate, and I strive to create visually stunning and impactful designs that leave a lasting impression.
+<p class="about" style="text-align: justify; width: 90%;"> Hello! I'm Kailan, a passionate graphic designer with a strong creative flair and a keen eye for detail. I believe that design has the power to captivate and communicate, and I strive to create visually stunning and impactful designs that leave a lasting impression.
 Since graduating my graphic design degree, I have had the privilege of working with a diverse range of clients and projects, honing my skills in various design disciplines. From completion of my degree through to my professional experience I’ve explored logo design, 2D and 3D design, motion, print-making and digital illustration, I have a versatile skill set that allows me to bring ideas to life across different mediums.
 My design process is centered around understanding the unique needs and objectives of each project. I believe that collaboration and open communication are key to achieving successful outcomes. I enjoy working closely with clients, listening to their ideas, and translating them into visually appealing designs that not only meet their expectations but also exceed them.  </p>
 </div>
