--- a/index.html
+++ b/index.html
@@ -351,15 +351,14 @@ My design process is centered around understanding the unique needs and objectiv
 
         <video style="border-radius:5px; width: 100%" src="VIDEO/NUMERIS.mp4" controls loop muted autoplay poster="posterimage.jpg"></video>
 
-
-
         <p> MeToo - After Effects (2020) </p>
         <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
         <p> Grounded Instagram Reel - Cinema 4D, After Effects (2020) </p>
         <video style="width: 100%;" autoplay muted loop controls class="first" src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
 
-
+        <p> MeToo - After Effects (2020) </p>
+        <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
 
       </div>
     </div>
