--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ My design process is centered around understanding the unique needs and objectiv
 
 
           <p> Chiming In - Photoshop, Risograph (2022) </p>
-          <img style="width: 100%;"src="imageshome/misc/ci.png" alt="Alone Cover">
+          <img style="width: 100%;"src="imageshome/misc/ci.jpg" alt="Alone Cover">
 
           <p> Alone Publication - Photoshop, Indesign (2022)</p>
             <img style="width:100%;" class="cover" src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
@@ -293,7 +293,7 @@ My design process is centered around understanding the unique needs and objectiv
 
           <p> Future of Loneliness - Indesign (2020) </p>
           <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
-            <img src="./imageshome/misc/fol1.png" alt="Food">
+            <img src="./imageshome/misc/fol1.jpg" alt="Food">
             </button>
 
 
