--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ My design process is centered around understanding the unique needs and objectiv
 
           <p> Roker - Album Cover (2023)</p>
           <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img  src="imageshome/misc/31.png" alt="Alone Cover"></img>
+            <img  src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
         </button>
 
 
@@ -257,14 +257,14 @@ My design process is centered around understanding the unique needs and objectiv
 
 
           <p> Radio Show - Cinema 4D (2022) </p>
-          <img src="./imageshome/misc/ELLIE.png" alt="Radio Show"style="width: 100%; ">
+          <img src="./imageshome/misc/ELLIE.jpg" alt="Radio Show"style="width: 100%; ">
 
 
           <p> Chiming In - Photoshop, Risograph (2022) </p>
           <img style="width: 100%;"src="imageshome/misc/ci.jpg" alt="Alone Cover">
 
           <p> Alone Publication - Photoshop, Indesign (2022)</p>
-            <img style="width:100%;" class="cover" src="imageshome/misc/MOCKUP.png" alt="Alone Cover">
+            <img style="width:100%;" class="cover" src="imageshome/misc/MOCKUP.jpg" alt="Alone Cover">
 
 
 
