--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@ My design process is centered around understanding the unique needs and objectiv
 
           <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022)</p>
           <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
-            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.png" alt="Alone Cover">
+            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
         </button>
 
         <p> Heat Death - Photoshop, Indesign, Illustrator (2022)</p>
         <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
-          <img style="width:100%; height:100%;"  src="imageshome/misc/mock1.png" alt="Alone Cover">
+          <img style="width:100%; height:100%;"  src="imageshome/misc/mock1.jpg" alt="Alone Cover">
       </button>
 
 
