--- a/fuze.html
+++ b/fuze.html
@@ -154,6 +154,7 @@
 
         <img style="margin-bottom: 5%;" src="MEDIAFUZE/Luxx.png" alt="">
 
+
       </div>
     </div>
 
@@ -166,10 +167,12 @@
         <p> Blood Ball flyer, created using Photoshop </p>
 
         <img src="MEDIAFUZE/flyer1.png" style="width: 100%; margin-bottom: 5%;" alt="">
+
         <p> Blog graphic, created using Blender and Photoshop </p>
 
         <img src="MEDIAFUZE/GRAPHIC.png" alt="">
         <img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/BLOG1.png" alt="">
+
 
       </div>
     </div>
@@ -177,11 +180,18 @@
   </div>
 </div>
 
+<p> Carousel Designs </p>
+<div class="carouselcontainer">
+  <div class="carousel">
+<video style="margin: 0%; width: 40vw;" loop autoplay muted src="MEDIAFUZE/carousel2.mp4" alt=""></video>
+<video style="margin: 0%; width: 40vw;"loop autoplay muted src="MEDIAFUZE/carousel3.mp4" alt=""></video>
+</div>
+</div>
+
 <p>Pages created for Fuze's publication.</p>
 
 <img style="margin-bottom: 5%; width:100%;" src="MEDIAFUZE/Spread1.png" alt="">
 <img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/Spread2.png" alt="">
-
 <img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/Spread3.png" alt="">
 
 
