update controls carousel

--- a/fuze.html
+++ b/fuze.html
@@ -183,8 +183,8 @@
 <p> Carousel Designs </p>
 <div class="carouselcontainer">
   <div class="carousel">
-<video style="margin: 0%; width: 40vw;" loop autoplay muted src="MEDIAFUZE/carousel2.mp4" alt=""></video>
-<video style="margin: 0%; width: 40vw;"loop autoplay muted src="MEDIAFUZE/carousel3.mp4" alt=""></video>
+<video style="margin: 0%; width: 40vw;" loop autoplay muted controls src="MEDIAFUZE/carousel2.mp4" alt=""></video>
+<video style="margin: 0%; width: 40vw;"loop autoplay muted controls src="MEDIAFUZE/carousel3.mp4" alt=""></video>
 </div>
 </div>
 
