--- a/index.html
+++ b/index.html
@@ -23,83 +23,82 @@
 
   <div class="sticky">
     <div class="name">Kailan Walsh</div>
-    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a></div>
-    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
-    margin-right: 1%;
-  /* display: flex; */
-    /* width: 300px; */
-    justify-content: flex-end;
-    flex-direction: row;
-    align-content: flex-end;
-    /* position: fixed; */
-    flex-wrap: nowrap;">
-      <div class="cv"> <svg>
-          <!--?xml version="1.0" encoding="utf-8"?-->
+    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a>    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
+        margin-right: 1%;
+      /* display: flex; */
+        /* width: 300px; */
+        justify-content: flex-end;
+        flex-direction: row;
+        align-content: flex-end;
+        /* position: fixed; */
+        flex-wrap: nowrap;">
+          <div class="cv"> <svg>
+              <!--?xml version="1.0" encoding="utf-8"?-->
 
-          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #FFFFFF;
-              }
+              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
+                <style type="text/css">
+                  .st0 {
+                    fill: #FFFFFF;
+                  }
 
-              .st1 {
-                stroke: #000000;
-                stroke-width: 0.25;
-                stroke-miterlimit: 10;
-              }
-            </style>
+                  .st1 {
+                    stroke: #000000;
+                    stroke-width: 0.25;
+                    stroke-miterlimit: 10;
+                  }
+                </style>
 
-            <g>
-              <g>
-                <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
-        			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
-                <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
-                <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
-                <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
-                <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
-                <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
-              </g>
-              <g>
-                <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
-        			c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
-        			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
-                <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
-                <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
-        			C21.2,12.7,21.2,12.9,21.2,13z"></path>
-                <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
-        			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
-                <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
-                <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
-              </g>
-              <g>
-                <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
-        			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
-                <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
-        			"></path>
-              </g>
-            </g>
-            <g>
-            </g>
-            <g>
-            </g>
-            <g>
-            </g>
-            <g>
-            </g>
-            <g>
-            </g>
-            <g>
-            </g>
-          </svg>
+                <g>
+                  <g>
+                    <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
+            			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
+                    <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
+                    <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
+            			C21.2,12.7,21.2,12.9,21.2,13z"></path>
+                    <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
+            			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+                    <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                    <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
+                  </g>
+                  <g>
+                    <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
+            			c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
+            			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
+                    <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
+                    <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
+            			C21.2,12.7,21.2,12.9,21.2,13z"></path>
+                    <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
+            			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
+                    <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                    <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
+                  </g>
+                  <g>
+                    <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
+            			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
+                    <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
+            			"></path>
+                  </g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+                <g>
+                </g>
+              </svg>
 
-        </svg></div>
-    </a>
+            </svg></div>
+        </a>
+</div>
   </div>
 
-
-
+</div>
 
 
 
@@ -158,14 +157,14 @@
 
 
         <img style="width: 100%;"src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
-        <img style="width: 100%;"src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
+        <img style="width: 100%; margin-bottom: 5%;"src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
 
 
 
 
 
 <hr>
-        <li class="top"> <span class="accent">S</span>elected Artwork <br> Print <sup style="font-size: 20px;">(2020-Present)</sup> </li>
+        <li class="top"> <span class="accent">S</span>elected Artwork <br> Print <sup style="font-size: 15px;">(2020-Present)</sup> </li>
         <div class="underline"></div>
 
       </ul>
@@ -184,7 +183,7 @@
           </button>
 
 
-          <p> Roker - Album Cover (2023)</p>
+          <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
           <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
             <img src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
           </button>
@@ -351,28 +350,26 @@
   <div class="underline"></div>
 
 
-  <p> Act Together <br>Cinema 4D, Octane <br>(2021) </p>
+  <p class="vidabout"> Act Together <br>Cinema 4D, Octane <br>(2021) </p>
 
   <div style="padding:56.25% 1% 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/649596606?h=4d80c77451&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
-  <p> Deep  <br>Cinema 4D, Octane <br>(2021) </p>
+  <p class="vidabout"> Deep  <br>Cinema 4D, Octane <br>(2021) </p>
 
   <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/668340106?h=4bd40fc3fd&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
-  <p> Grounded  <br>Cinema 4D, Octane <br>(2021) </p>
+  <p class="vidabout"> Grounded  <br>Cinema 4D, Octane <br>(2021) </p>
   <div style="padding:56.25% 0 0 0;position:relative;">
     <iframe src="https://player.vimeo.com/video/750409212?h=774a636d93&quality=1080p&loop=1&title=0&byline=0&portrait=0" style="margin-top:1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
-<div class="animabtcon">
-  <p> Tall Tales - Cinema 4D, Octane (2021) </p>
-</div>
+  <p class="vidabout"> Tall Tales<br> Cinema 4D, Octane <br>(2021) </p>
   <div style="padding:54.55% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/511296655?h=e550239be7&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
