--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 
   <div class="sticky">
-    <div class="name">Kailan Walsh</div>
-    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a>    <a href="CV/KAILAN WALSH CV.pdf" target="_blank" download="" style="
+    <div class="name"> <img class="logo"style=""src="imageshome/logo.png"></div>
+    <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a> <a href="CV/KAILAN WALSH CV.pdf" target="_blank"
+        download="" style="
         margin-right: 1%;
       /* display: flex; */
         /* width: 300px; */
@@ -32,80 +33,85 @@
         align-content: flex-end;
         /* position: fixed; */
         flex-wrap: nowrap;">
-          <div class="cv"> <svg>
-              <!--?xml version="1.0" encoding="utf-8"?-->
+        <div class="cv"> <svg>
+            <!--?xml version="1.0" encoding="utf-8"?-->
 
-              <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
-                <style type="text/css">
-                  .st0 {
-                    fill: #FFFFFF;
-                  }
+            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
+              <style type="text/css">
+                .st0 {
+                  fill: #FFFFFF;
+                }
 
-                  .st1 {
-                    stroke: #000000;
-                    stroke-width: 0.25;
-                    stroke-miterlimit: 10;
-                  }
-                </style>
+                .st1 {
+                  stroke: #000000;
+                  stroke-width: 0.25;
+                  stroke-miterlimit: 10;
+                }
+              </style>
 
+              <g>
                 <g>
-                  <g>
-                    <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
+                  <path class="st0" d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0
             			c0.2,0,0.3,0.1,0.4,0.2c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z"></path>
-                    <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
-                    <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
+                  <path class="st0" d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
+                  <path class="st0" d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
             			C21.2,12.7,21.2,12.9,21.2,13z"></path>
-                    <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
+                  <path class="st0" d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
             			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
-                    <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
-                    <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
-                  </g>
-                  <g>
-                    <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
+                  <path class="st0" d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                  <path class="st0" d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
+                </g>
+                <g>
+                  <path d="M24.5,26.3c-6.2,0-12.4,0-18.6,0c0-8.3,0-16.6,0-24.9c0.1,0,0.2,0,0.3,0c4,0,8.1,0,12.1,0c0.2,0,0.3,0.1,0.4,0.2
             			c1.9,2,3.8,3.9,5.7,5.9c0.1,0.1,0.1,0.2,0.1,0.3c0,6.1,0,12.2,0,18.3C24.5,26.2,24.5,26.2,24.5,26.3z M6.7,25.5c5.7,0,11.3,0,17,0
             			c0-6,0-11.9,0-17.9c-1.8,0-3.6,0-5.4,0c0-1.8,0-3.6,0-5.4c-3.9,0-7.7,0-11.6,0C6.7,10,6.7,17.7,6.7,25.5z"></path>
-                    <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
-                    <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
+                  <path d="M9.5,20.5c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0c0,0.3,0,0.5,0,0.8C17.3,20.5,13.4,20.5,9.5,20.5z"></path>
+                  <path d="M21.2,13c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c0.1,0,0.2,0,0.3,0c3.7,0,7.4,0,11.1,0c0.2,0,0.3,0,0.3,0.3
             			C21.2,12.7,21.2,12.9,21.2,13z"></path>
-                    <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
+                  <path d="M21.2,14.7c0,0.2,0,0.5,0,0.7c0,0-0.1,0.1-0.1,0.1c-0.1,0-0.1,0-0.2,0c-3.7,0-7.3,0-11,0c-0.1,0-0.2,0-0.3,0
             			c0-0.3,0-0.6,0-0.8C13.4,14.7,17.3,14.7,21.2,14.7z"></path>
-                    <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
-                    <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
-                  </g>
-                  <g>
-                    <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
+                  <path d="M21.2,18c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8c3.9,0,7.7,0,11.6,0C21.2,17.5,21.2,17.7,21.2,18z"></path>
+                  <path d="M21.2,22.2c0,0.3,0,0.5,0,0.8c-3.9,0-7.7,0-11.6,0c0-0.3,0-0.5,0-0.8C13.4,22.2,17.3,22.2,21.2,22.2z"></path>
+                </g>
+                <g>
+                  <path class="st1" d="M12.1,9.1c-0.3,0.1-0.8,0.3-1.5,0.3c-1.6,0-2.7-1-2.7-2.8c0-1.7,1.2-2.9,2.9-2.9c0.7,0,1.1,0.1,1.3,0.2
             			l-0.2,0.6c-0.3-0.1-0.7-0.2-1.1-0.2c-1.3,0-2.2,0.8-2.2,2.3c0,1.4,0.8,2.2,2.1,2.2c0.4,0,0.9-0.1,1.2-0.2L12.1,9.1z"></path>
-                    <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
+                  <path class="st1" d="M14.5,9.3l-1.8-5.5h0.8l0.9,2.7c0.2,0.7,0.4,1.4,0.6,2.1h0c0.2-0.6,0.4-1.3,0.6-2.1l0.9-2.7h0.8l-2,5.5H14.5z
             			"></path>
-                  </g>
                 </g>
-                <g>
-                </g>
-                <g>
-                </g>
-                <g>
-                </g>
-                <g>
-                </g>
-                <g>
-                </g>
-                <g>
-                </g>
-              </svg>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+              <g>
+              </g>
+            </svg>
 
-            </svg></div>
-        </a>
-</div>
+          </svg></div>
+      </a>
+    </div>
   </div>
 
-</div>
+  </div>
 
 
 
 
   <header class="sub" id="subtitle" style="opacity: 1;">
-    <h1 style="position: absolute;">Kailan<span class="emphasize">(/kay-lun\)</span> is a versatile <span class="accent">d</span>esigner, specialising in <span class="emphasize2">Graphic Design</span> and <span class="emphasize2">Motion <span class="accent">G</span>raphics.&nbsp;</span></h1>
+    <h1 style="position: absolute;">Kailan<span class="emphasize">(/kay-lun\)</span> is a versatile <span class="accent">d</span>esigner, specialising in <span class="emphasize2">Graphic Design</span> and <span class="emphasize2">Motion <span
+          class="accent">G</span>raphics.&nbsp;</span></h1>
   </header>
+
+  <video style="width:100%;" src="imageshome/misc/mespin.mp4" loop autoplay muted poster="posterimage.jpg">
+
+  </video>
 
   <div class="about-wrapper" style="  display: flex;
   justify-content: center; margin-bottom: 20%;">
@@ -151,25 +157,27 @@
 
 
 
-
+        <div style="margin-top: 5%;"class="underlinetop"></div>
         <li class="top"> <span class="accent">M</span>ost recent project </li>
         <div class="underline"></div>
 
 
-        <img style="width: 100%;"src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
-        <img style="width: 100%; margin-bottom: 5%;"src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
+        <img style="width: 100%;" src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
+        <img style="width: 100%; margin-bottom: 5%;" src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
 
 
 
 
 
-<hr>
+        <div class="underlinetop"></div>
         <li class="top"> <span class="accent">S</span>elected Artwork <br> Print <sup style="font-size: 15px;">(2020-Present)</sup> </li>
         <div class="underline"></div>
 
       </ul>
     </div>
   </div>
+
+
 
   <div class="container">
     <div class="image-gallery">
@@ -183,28 +191,6 @@
           </button>
 
 
-          <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
-          </button>
-
-          <p> Future of Loneliness - Indesign (2020) <sup>Click Below</sup> </p>
-          <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
-            <img src="./imageshome/misc/fol1.jpg" alt="Food">
-          </button>
-
-
-          <p> Out There - Photoshop, Indesign (2022) <sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="out" aria-label="Open out image gallery" style="background-color: white; border: 0;">
-            <img style="width:100%;" src="imageshome/misc/1out.png" alt="Alone Cover">
-          </button>
-
-
-
-
-
-
-
         </div>
       </div>
       <div class="column">
@@ -212,20 +198,6 @@
 
           <p> Chiming In - Photoshop, Risograph (2022) </p>
           <img style="width: 100%;" src="imageshome/misc/ci.jpg" alt="Alone Cover">
-
-
-          <p> Radio Show - Cinema 4D (2022) </p>
-          <img src="./imageshome/misc/ELLIE.jpg" alt="Radio Show" style="width: 100%; ">
-
-          <p> Heat Death - Photoshop, Indesign, Illustrator (2022)<sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
-            <img style="width:100%; height:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
-          </button>
-
-
-
-
-
 
 
         </div>
@@ -237,22 +209,6 @@
           <p> On my radio (2021)</p>
           <img style="width:100%; " src="imageshome/misc/6.jpg" alt="Alone Cover">
 
-          <p> Courtyard Social - Illustrator (2023)</p>
-          <img style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
-
-
-          <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022) <sup>Click Below</sup></p>
-          <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
-          <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
-          </button>
-
-
-
-
-
-
-
-
 
 
         </div>
@@ -260,8 +216,91 @@
     </div>
   </div>
 
-  <hr>
 
+  <div class="container">
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+
+          <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
+          <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
+            <img src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
+          </button>
+
+
+        </div>
+      </div>
+      <div class="column">
+        <div class="image-item">
+          <p> Radio Show - Cinema 4D (2022) </p>
+          <img src="./imageshome/misc/ELLIE.jpg" alt="Radio Show" style="width: 100%; ">
+
+        </div>
+      </div>
+      <div class="column">
+        <div class="image-item">
+
+          <p> Courtyard Social - Illustrator (2023)</p>
+          <img style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+  </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+
+
+          <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022) <sup>Click Below</sup></p>
+          <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
+            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
+          </button>
+
+
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="image-item">
+
+          <p> Out There - Photoshop, Indesign (2022) <sup>Click Below</sup></p>
+          <button class="image-pic" data-modal="true" data-gallery="out" aria-label="Open out image gallery" style="background-color: white; border: 0;">
+            <img style="width:100%;" src="imageshome/misc/1out.png" alt="Alone Cover">
+          </button>
+
+          <p> Heat Death - Photoshop, Indesign, Illustrator (2022)<sup>Click Below</sup></p>
+          <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
+            <img style="width:100%; height:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
+          </button>
+
+
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="image-item">
+
+          <p> Future of Loneliness - Indesign (2020) <sup>Click Below</sup> </p>
+          <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
+            <img src="./imageshome/misc/fol1.jpg" alt="Food">
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <div class="underlinetop"></div>
   <li class="top"> <span class="accent">M</span>otion </li>
   <div class="underline"></div>
 
@@ -344,7 +383,7 @@
 
 
 
-  <hr>
+  <div class="underlinetop"></div>
 
   <li class="top"> <span class="accent">A</span>nimation </li>
   <div class="underline"></div>
@@ -356,13 +395,13 @@
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
-  <p class="vidabout"> Deep  <br>Cinema 4D, Octane <br>(2021) </p>
+  <p class="vidabout"> Deep <br>Cinema 4D, Octane <br>(2021) </p>
 
   <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/668340106?h=4bd40fc3fd&title=0&byline=0&portrait=0" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
-  <p class="vidabout"> Grounded  <br>Cinema 4D, Octane <br>(2021) </p>
+  <p class="vidabout"> Grounded <br>Cinema 4D, Octane <br>(2021) </p>
   <div style="padding:56.25% 0 0 0;position:relative;">
     <iframe src="https://player.vimeo.com/video/750409212?h=774a636d93&quality=1080p&loop=1&title=0&byline=0&portrait=0" style="margin-top:1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
