--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="imageshome/apple-touch-icon.png">
+  <link rel="icon" type="images/png" sizes="32x32" href="imageshome/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="imageshome/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 
