--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
   <header class="sub" id="subtitle" style="opacity: 1;">
-    <h1 style="position: absolute;">Kailan<span class="emphasize">(/kay-lun\)</span> is a versatile <span class="accent">d</span>esigner, specialising in <span class="emphasize2">Graphic Design</span> and <span class="emphasize2">Motion <span
+    <h1 style="position: absolute; overflow-wrap: break-word; width: 100%;">Kailan<span class="emphasize">(/kay-lun\)</span> is a versatile <span class="accent">d</span>esigner, specialising in <span class="emphasize2">Graphic Design</span> and <span class="emphasize2">Motion <span
           class="accent">G</span>raphics.&nbsp;</span></h1>
   </header>
 
@@ -137,7 +137,7 @@
       <ul style="padding:0;">
         <hr>
         <div class="conqcontainer">
-          <p class="conqinfo"> Ongoing motion & graphic design work for Conqueer Bristol. </p>
+          <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
 
           <a class="conq" href="Conqueer.html">
             <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
@@ -160,7 +160,7 @@
           </div>
         </div>
 
-        <hr>
+        <hr style="margin-bottom:20%;">
 
 
 
@@ -169,15 +169,16 @@
         <div class="underline"></div>
 
 
-        <img style="width: 100%;" src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
-        <img style="width: 100%; margin-bottom: 5%;" src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
+        <img style="width: 100%; margin-bottom: 5%;" src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
+        <div class="underline"></div>
+        <img style="width: 100%; margin-bottom: 10%;" src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
 
 
 
 
 
         <div class="underlinetop"></div>
-        <li class="top"> <span class="accent">S</span>elected Artwork <br> Print <sup style="font-size: 15px;">(2020-Present)</sup> </li>
+        <li class="top"> <span class="accent">S</span>elected Artwork <br> Print</sup> </li>
         <div class="underline"></div>
 
       </ul>
@@ -420,6 +421,11 @@
       allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
   <script src="https://player.vimeo.com/api/player.js"></script>
 
+
+  <p class="vidabout"> Out There<br> After Effects, Stop Motion <br>(2021) </p>
+  <div style="padding:54.55% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/499726400?h=dd3f2d0150" style="margin-top: 1%;position:absolute;top:0;left:0;width:100%;height:80%;" frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+  <script src="https://player.vimeo.com/api/player.js"></script>
 
 
 
