--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
   <div class="sticky">
-    <div class="name"> <img class="logo"style=""src="imageshome/logo.png"></div>
+    <div class="name"> <img loading="lazy" class="logo"style=""src="imageshome/logo.png"></div>
     <div class="iconcon"> <a href="https://www.linkedin.com/in/kailan-walsh-a920621a6/" class="fa fa-linkedin"></a> <a href="https://www.instagram.com/kailanfx/" class="fa fa-instagram"></a> <a href="CV/KAILAN WALSH CV.pdf" target="_blank"
         download="" style="
         margin-right: 1%;
@@ -140,7 +140,7 @@
           <p class="conqinfo"> Ongoing motion/graphic design work for Conqueer Bristol. </p>
 
           <a class="conq" href="Conqueer.html">
-            <li class="liconq"> <img class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
+            <li class="liconq"> <img loading="lazy" class="imgconq" src="imageshome/conqueer.png">Conqueer</li>
           </a>
 
           <div class="conqaboutcontainer">
@@ -153,7 +153,7 @@
         <div class="fuzecontainer">
           <p class="fuzeinfo"> Ongoing motion/graphic design work for FUZE Bristol. </p>
           <a class="fuze" href="fuze.html">
-            <li class="lifuze"><img class="imgfuze" src="imageshome/flyer1.png">FUZE </li>
+            <li class="lifuze"><img loading="lazy" class="imgfuze" src="imageshome/flyer1.png">FUZE </li>
           </a>
           <div class="fuzeboutcontainer">
             <p class="fuzebout">2022-2023</p>
@@ -169,9 +169,9 @@
         <div class="underline"></div>
 
 
-        <img style="width: 100%; margin-bottom: 5%;" src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
+        <img loading="lazy" style="width: 100%; margin-bottom: 5%;" src="imageshome/misc/recentmock.jpg" alt="Alone Cover"></img>
         <div class="underline"></div>
-        <img style="width: 100%; margin-bottom: 10%;" src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
+        <img loading="lazy" style="width: 100%; margin-bottom: 10%;" src="imageshome/LOGO.jpg" alt="Alone Cover"></img>
 
 
 
@@ -195,7 +195,7 @@
 
           <p> Garden of Unearthly Delights - Promo (2023)</p>
           <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img src="imageshome/misc/A3.png" alt="Alone Cover"></img>
+            <img loading="lazy" src="imageshome/misc/A3.png" alt="Alone Cover"></img>
           </button>
 
 
@@ -205,7 +205,7 @@
         <div class="image-item">
 
           <p> Chiming In - Photoshop, Risograph (2022) </p>
-          <img style="width: 100%;" src="imageshome/misc/ci.jpg" alt="Alone Cover">
+          <img loading="lazy" style="width: 100%;" src="imageshome/misc/ci.jpg" alt="Alone Cover">
 
 
         </div>
@@ -215,7 +215,7 @@
         <div class="image-item">
 
           <p> On my radio (2021)</p>
-          <img style="width:100%; " src="imageshome/misc/6.jpg" alt="Alone Cover">
+          <img loading="lazy" style="width:100%; " src="imageshome/misc/6.jpg" alt="Alone Cover">
 
 
 
@@ -232,7 +232,7 @@
 
           <p> Roker - Album Cover (2023)<sup>Click Below</sup></p>
           <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
+            <img loading="lazy" src="imageshome/misc/31.jpg" alt="Alone Cover"></img>
           </button>
 
 
@@ -241,7 +241,7 @@
       <div class="column">
         <div class="image-item">
           <p> Radio Show - Cinema 4D (2022) </p>
-          <img src="./imageshome/misc/ELLIE.jpg" alt="Radio Show" style="width: 100%; ">
+          <img loading="lazy" src="./imageshome/misc/ELLIE.jpg" alt="Radio Show" style="width: 100%; ">
 
         </div>
       </div>
@@ -249,7 +249,7 @@
         <div class="image-item">
 
           <p> Courtyard Social - Illustrator (2023)</p>
-          <img style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+          <img loading="lazy" style="width: 100%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
 
         </div>
       </div>
@@ -269,7 +269,7 @@
 
           <p> Plug-In - Photoshop, Indesign, Cinema 4D (2022) <sup>Click Below</sup></p>
           <button class="image-pic" data-modal="true" data-gallery="wig" aria-label="Open wig image gallery" style=" border: 0;">
-            <img style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
+            <img loading="lazy" style="width:100%; height:100%;" class="cover" src="imageshome/misc/mockup10.jpg" alt="Alone Cover">
           </button>
 
 
@@ -281,12 +281,12 @@
 
           <p> Out There - Photoshop, Indesign (2022) <sup>Click Below</sup></p>
           <button class="image-pic" data-modal="true" data-gallery="out" aria-label="Open out image gallery" style="background-color: white; border: 0;">
-            <img style="width:100%;" src="imageshome/misc/1out.png" alt="Alone Cover">
+            <img loading="lazy" style="width:100%;" src="imageshome/misc/1out.png" alt="Alone Cover">
           </button>
 
           <p> Heat Death - Photoshop, Indesign, Illustrator (2022)<sup>Click Below</sup></p>
           <button class="image-pic" data-modal="true" data-gallery="Heat" aria-label="Open Heat image gallery" style="background-color: white; border: 0;">
-            <img style="width:100%; height:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
+            <img loading="lazy" style="width:100%; height:100%;" src="imageshome/misc/mock1.jpg" alt="Alone Cover">
           </button>
 
 
@@ -298,7 +298,7 @@
 
           <p> Future of Loneliness - Indesign (2020) <sup>Click Below</sup> </p>
           <button class="image-pic" data-modal="true" data-gallery="fol" aria-label="Open fol image gallery" style="background-color: white; border: 0;">
-            <img src="./imageshome/misc/fol1.jpg" alt="Food">
+            <img loading="lazy" src="./imageshome/misc/fol1.jpg" alt="Food">
           </button>
         </div>
       </div>
@@ -319,22 +319,22 @@
         <div class="image-item">
 
           <p> Art of bubble (2023)</p>
-          <video style="width: 100%;" controls style="border-radius:5px;" src="imageshome/misc/balls.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+          <video loading="lazy" style="width: 100%;" controls style="border-radius:5px;" src="imageshome/misc/balls.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
 
           <p> Roker - Spotify Canvas (2023)</p>
 
-          <video style="width: 100%;" controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
+          <video loading="lazy" style="width: 100%;" controls style="border-radius:5px;" src="VIDEO/SPIN2.mp4" loop muted autoplay poster="posterimage.jpg"></video>
 
 
 
           <p> MeToo - After Effects (2020) </p>
-          <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 6.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 6.mp4" alt="Alone Cover"></video>
 
 
           <p> Cymatics - After Effects (2020) </p>
 
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730951920?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
+          <div loading="lazy" style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/730951920?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="CYMATIC"></iframe></div>
           <script src="https://player.vimeo.com/api/player.js"></script>
 
@@ -346,19 +346,19 @@
 
           <p> Butterfly Animation - Cinema 4D, After Effects (2020) </p>
 
-          <video style="width: 100%;" autoplay controls muted loop src="imageshome/misc/BUTTERFLY.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay controls muted loop src="imageshome/misc/BUTTERFLY.mp4" alt="Alone Cover"></video>
 
           <p> Numeris Gift Card Promo Video - Blender (2023) </p>
 
-          <video style="border-radius:5px; width: 100%" src="VIDEO/NUMERIS.mp4" controls loop muted autoplay poster="posterimage.jpg"></video>
+          <video loading="lazy" style="border-radius:5px; width: 100%" src="VIDEO/NUMERIS.mp4" controls loop muted autoplay poster="posterimage.jpg"></video>
 
 
 
           <p> MeToo - After Effects (2020) </p>
-          <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/7.mp4" alt="Alone Cover"></video>
 
           <p> MeToo - After Effects (2020) </p>
-          <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/INSTA 10.mp4" alt="Alone Cover"></video>
 
         </div>
       </div>
@@ -367,17 +367,17 @@
         <div class="image-item">
 
           <p> Vault Records - After Effects (2022) </p>
-          <video style="width: 100%;" autoplay controls muted loop src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay controls muted loop src="VIDEO/GEO.mp4" alt="Alone Cover"></video>
 
           <p> Grounded Instagram Reel - Cinema 4D, After Effects (2020) </p>
-          <video style="width: 100%;" autoplay muted loop controls class="first" src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="imageshome/misc/traingirl1.mp4" alt="Alone Cover"></video>
 
           <p> MeToo - Cinema 4D, After Effects (2020) </p>
-          <video style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
+          <video loading="lazy" style="width: 100%;" autoplay muted loop controls class="first" src="MEDIAMETOO/4.mp4" alt="Alone Cover"></video>
 
 
           <p> Cut It Out - After Effects (2020) </p>
-          <video style="border-radius:5px; width: 100%;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
+          <video loading="lazy" style="border-radius:5px; width: 100%;" src="VIDEO/cutit.mp4" loop muted autoplay controls poster="posterimage.jpg"></video>
 
 
 
