--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           class="accent">G</span>raphics.&nbsp;</span></h1>
   </header>
 
-  <video style="width:100%;" src="imageshome/misc/mespin.mp4" loop autoplay muted poster="posterimage.jpg">
+  <video loading="lazy" style="width:100%;" src="imageshome/misc/mespin.mp4" loop autoplay muted poster="posterimage.jpg">
 
   </video>
 
