--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
           <p> Garden of Unearthly Delights - Promo (2023)</p>
           <button class="image-pic" data-modal="true" data-gallery="roker" aria-label="Open roker image gallery" style="background-color: white; cursor: pointer; border: 0;">
-            <img loading="lazy" src="imageshome/misc/A3.png" alt="Alone Cover"></img>
+            <img loading="lazy" src="imageshome/misc/GOUD.jpg" alt="Alone Cover"></img>
           </button>
 
 
