--- a/Conqueer.html
+++ b/Conqueer.html
@@ -134,9 +134,9 @@
             <p> Moving poster created using Blender and After Effects.</p>
             <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Poster created using Blender and Photoshop.</p>
-            <img src="MEDIACONQ/IGFIN2.png" alt="">
+            <img src="MEDIACONQ/IGFIN2.jpg" alt="">
             <p> Poster created using Cinema 4D and Photoshop.</p>
-            <img src="MEDIACONQ/CONQUEER.png" alt="">
+            <img src="MEDIACONQ/CONQUEER.jpg" alt="">
             <p> Moving poster created using Cinema 4D and After Effects.</p>
             <video controls style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
