--- a/Conqueer.html
+++ b/Conqueer.html
@@ -132,13 +132,13 @@
         <div style="width: 100%;" class="column">
           <div class="image-item">
             <p> Moving poster created using Blender and After Effects.</p>
-            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video loading="lazy" controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/MOVING FLAIL.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Poster created using Blender and Photoshop.</p>
-            <img src="MEDIACONQ/IGFIN2.jpg" alt="">
+            <img loading="lazy" src="MEDIACONQ/IGFIN2.jpg" alt="">
             <p> Poster created using Cinema 4D and Photoshop.</p>
-            <img src="MEDIACONQ/CONQUEER.jpg" alt="">
+            <img loading="lazy" src="MEDIACONQ/CONQUEER.jpg" alt="">
             <p> Moving poster created using Cinema 4D and After Effects.</p>
-            <video controls style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video loading="lazy" controls style="width: 100%; height: 100%;" src="MEDIACONQ/CONQMOVING.mp4" loop autoplay muted poster="posterimage.jpg"></video>
 
           </div>
         </div>
@@ -146,18 +146,18 @@
         <div style="width: 100%;" class="column">
           <div class="image-item">
             <p> Announcement video created using Blender and After Effects.</p>
-            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT1.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video loading="lazy" controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/ANNOUNCEMENT1.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Poster created using Procreate, Blender and Photoshop.</p>
 
-            <img src="MEDIACONQ/AHH.png" alt=""></img>
+            <img loading="lazy" src="MEDIACONQ/AHH.png" alt=""></img>
             <p> Moving poster created using Cinema 4D and After Effects.</p>
 
-            <video controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
+            <video loading="lazy" controls style="width: 100%; height: 100%; border-radius:5px;" src="MEDIACONQ/SWORDVID.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Announcement graphic created using Cinema 4D and Photoshop.</p>
-            <img style="width: 100%; height: 100%;;" class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
+            <img loading="lazy" style="width: 100%; height: 100%;;" class="postersword" src="MEDIACONQ/SWORDFINAL3.png" alt="">
             <p> Poster created using Procreate and Photoshop.</p>
 
-            <img style="width: 100%; height: 100%;" style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
+            <img loading="lazy" style="width: 100%; height: 100%;" style="width:100%; height:32%;" class="movingqj" src="MEDIACONQ/queerjoyig5.jpg" alt="">
           </div>
         </div>
 
