--- a/fuze.html
+++ b/fuze.html
@@ -141,10 +141,10 @@
             <video controls style="width: 100% ; height: 100%; border-radius:5px;" src="MEDIAFUZE/LIVE.mp4" loop autoplay muted poster="posterimage.jpg"></video>
             <p> Blog graphic, created using Photoshop </p>
 
-            <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.png" alt="">
+            <img style="margin-bottom: 5%;" src="MEDIAFUZE/HEADER5.jpg" alt="">
             <p> Blog graphic, created using Photoshop </p>
 
-            <img style="margin-bottom: 5%;" src="MEDIAFUZE/Luxx.png" alt="">
+            <img style="margin-bottom: 5%;" src="MEDIAFUZE/Luxx.jpg" alt="">
 
 
           </div>
@@ -155,15 +155,18 @@
           <div class="image-item">
             <p> Redlight flyer, created using Photoshop </p>
 
-            <img style="width: 100%; height: 100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.png" alt=""></img>
+            <img style="width: 100%; height: 100%; margin-bottom: 5%;" src="MEDIAFUZE/A3.jpg" alt=""></img>
+
+            <p> Ticket sale announcement, created using Illustrator and After Effects </p>
+            <img style="width: 100%; height: 100%; margin-bottom: 5%;" src="MEDIAFUZE/80%.jpg" alt=""></img>
+
             <p> Blood Ball flyer, created using Photoshop </p>
 
             <img src="MEDIAFUZE/flyer1.png" style="width: 100%; margin-bottom: 5%;" alt="">
 
             <p> Blog graphic, created using Blender and Photoshop </p>
 
-            <img src="MEDIAFUZE/GRAPHIC.png" alt="">
-            <img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/BLOG1.png" alt="">
+            <img src="MEDIAFUZE/GRAPHIC.jpg" alt="">
 
 
           </div>
@@ -179,6 +182,9 @@
         <video style="margin: 0%; width: 40vw;" loop autoplay muted controls src="MEDIAFUZE/carousel3.mp4" alt=""></video>
       </div>
     </div>
+
+    <p>Blog graphics in use</p>
+    <img style="margin-bottom: 5%;width:100%;" src="MEDIAFUZE/BLOG1.png" alt="">
 
     <p>Pages created for Fuze's publication.</p>
 
