--- a/index.html
+++ b/index.html
@@ -243,16 +243,16 @@
       </div>
       <div class="column">
         <div class="image-item">
-          <p> Radio Show - Cinema 4D (2022) </p>
-          <img loading="lazy" src="./imageshome/misc/ellieradio.jpg" alt="Radio Show" style="width: 100%; ">
+          <p> Courtyard Social - Illustrator (2023)</p>
+          <img loading="lazy" style="width: 100%;" src="imageshome/misc/selling earth.jpg" alt="Alone Cover">
 
         </div>
       </div>
       <div class="column">
         <div class="image-item">
 
-          <p> Courtyard Social - Illustrator (2023)</p>
-          <img loading="lazy" style="width: 100%;" src="imageshome/misc/selling earth.jpg" alt="Alone Cover">
+          <p> Radio Show - Cinema 4D (2022) </p>
+          <img loading="lazy" src="./imageshome/misc/ELLIE.png" alt="Radio Show" style="width: 100%; ">
 
         </div>
       </div>
@@ -417,7 +417,7 @@
   <p style="margin-left: 1%;"> Courtyard Social - Illustrator (2023)</p>
   <div style="display:flex; justify-content: center;">
   <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
-  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO ORANGE.png" alt="Alone Cover">
+  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO DARK GREEN.png" alt="Alone Cover">
 
 </div>
 
