--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
       <div class="column">
         <div class="image-item">
-          <p> Courtyard Social - Illustrator (2023)</p>
+          <p> Courtyard Social Branding - Illustrator (2023)</p>
           <img loading="lazy" style="width: 100%;" src="imageshome/misc/selling earth.jpg" alt="Alone Cover">
 
         </div>
@@ -366,7 +366,7 @@
      <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>  </div>
      <p style="margin-left: 1%;"> Heat Death - Photoshop, Indesign(2022)</p>
 
-  <div class="slideshow-container">
+  <div class="slideshow-container" style="margin-bottom: 10%;">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides3 fade">
@@ -416,8 +416,8 @@
 
   <p style="margin-left: 1%;"> Courtyard Social - Illustrator (2023)</p>
   <div style="display:flex; justify-content: center;">
-  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
-  <img loading="lazy" style="width: 50%; margin-bottom: 5%;" src="imageshome/misc/LOGO DARK GREEN.png" alt="Alone Cover">
+  <img loading="lazy" style="width: 50%; margin-bottom: 10%;" src="imageshome/misc/LOGO GREEN.png" alt="Alone Cover">
+  <img loading="lazy" style="width: 50%; margin-bottom: 10%;" src="imageshome/misc/LOGO DARK GREEN.png" alt="Alone Cover">
 
 </div>
 
